# api/generated/dochq.co.uk/answerserviceapi/v1/answer_model.pb.go
@@ -21,6 +21,60 @@ const (
 )
 
 //*
+// Represents the answer event type.
+type AnswerEventType int32
+
+const (
+	AnswerEventType_ANSWER_EVENT_TYPE_UNKNOWN AnswerEventType = 0
+	AnswerEventType_ANSWER_EVENT_TYPE_CREATE  AnswerEventType = 1
+	AnswerEventType_ANSWER_EVENT_TYPE_UPDATE  AnswerEventType = 2
+	AnswerEventType_ANSWER_EVENT_TYPE_DELETE  AnswerEventType = 3
+)
+
+// Enum value maps for AnswerEventType.
+var (
+	AnswerEventType_name = map[int32]string{
+		0: "ANSWER_EVENT_TYPE_UNKNOWN",
+		1: "ANSWER_EVENT_TYPE_CREATE",
+		2: "ANSWER_EVENT_TYPE_UPDATE",
+		3: "ANSWER_EVENT_TYPE_DELETE",
+	}
+	AnswerEventType_value = map[string]int32{
+		"ANSWER_EVENT_TYPE_UNKNOWN": 0,
+		"ANSWER_EVENT_TYPE_CREATE":  1,
+		"ANSWER_EVENT_TYPE_UPDATE":  2,
+		"ANSWER_EVENT_TYPE_DELETE":  3,
+	}
+)
+
+func (x AnswerEventType) Enum() *AnswerEventType {
+	p := new(AnswerEventType)
+	*p = x
+	return p
+}
+
+func (x AnswerEventType) String() string {
+	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
+}
+
+func (AnswerEventType) Descriptor() protoreflect.EnumDescriptor {
+	return file_answer_model_proto_enumTypes[0].Descriptor()
+}
+
+func (AnswerEventType) Type() protoreflect.EnumType {
+	return &file_answer_model_proto_enumTypes[0]
+}
+
+func (x AnswerEventType) Number() protoreflect.EnumNumber {
+	return protoreflect.EnumNumber(x)
+}
+
+// Deprecated: Use AnswerEventType.Descriptor instead.
+func (AnswerEventType) EnumDescriptor() ([]byte, []int) {
+	return file_answer_model_proto_rawDescGZIP(), []int{0}
+}
+
+//*
 // Represents the answer model.
 type Answer struct {
 	state         protoimpl.MessageState
@@ -77,6 +131,63 @@ func (x *Answer) GetValue() string {
 	return ""
 }
 
+//*
+// Represents the answer event model.
+type AnswerEvent struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	EventType AnswerEventType `protobuf:"varint,1,opt,name=event_type,json=eventType,proto3,enum=dochq.co.uk.answerservice.generated.model.v1.AnswerEventType" json:"event_type,omitempty"`
+	Data      *Answer         `protobuf:"bytes,2,opt,name=data,proto3" json:"data,omitempty"`
+}
+
+func (x *AnswerEvent) Reset() {
+	*x = AnswerEvent{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_answer_model_proto_msgTypes[1]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *AnswerEvent) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*AnswerEvent) ProtoMessage() {}
+
+func (x *AnswerEvent) ProtoReflect() protoreflect.Message {
+	mi := &file_answer_model_proto_msgTypes[1]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use AnswerEvent.ProtoReflect.Descriptor instead.
+func (*AnswerEvent) Descriptor() ([]byte, []int) {
+	return file_answer_model_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *AnswerEvent) GetEventType() AnswerEventType {
+	if x != nil {
+		return x.EventType
+	}
+	return AnswerEventType_ANSWER_EVENT_TYPE_UNKNOWN
+}
+
+func (x *AnswerEvent) GetData() *Answer {
+	if x != nil {
+		return x.Data
+	}
+	return nil
+}
+
 var File_answer_model_proto protoreflect.FileDescriptor
 
 var file_answer_model_proto_rawDesc = []byte{
@@ -87,9 +198,30 @@ var file_answer_model_proto_rawDesc = []byte{
 	0x76, 0x31, 0x22, 0x30, 0x0a, 0x06, 0x41, 0x6e, 0x73, 0x77, 0x65, 0x72, 0x12, 0x10, 0x0a, 0x03,
 	0x6b, 0x65, 0x79, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x03, 0x6b, 0x65, 0x79, 0x12, 0x14,
 	0x0a, 0x05, 0x76, 0x61, 0x6c, 0x75, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x76,
-	0x61, 0x6c, 0x75, 0x65, 0x42, 0x21, 0x5a, 0x1f, 0x64, 0x6f, 0x63, 0x68, 0x71, 0x2e, 0x63, 0x6f,
-	0x2e, 0x75, 0x6b, 0x2f, 0x61, 0x6e, 0x73, 0x77, 0x65, 0x72, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63,
-	0x65, 0x61, 0x70, 0x69, 0x2f, 0x76, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x61, 0x6c, 0x75, 0x65, 0x22, 0xb5, 0x01, 0x0a, 0x0b, 0x41, 0x6e, 0x73, 0x77, 0x65, 0x72, 0x45,
+	0x76, 0x65, 0x6e, 0x74, 0x12, 0x5c, 0x0a, 0x0a, 0x65, 0x76, 0x65, 0x6e, 0x74, 0x5f, 0x74, 0x79,
+	0x70, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0e, 0x32, 0x3d, 0x2e, 0x64, 0x6f, 0x63, 0x68, 0x71,
+	0x2e, 0x63, 0x6f, 0x2e, 0x75, 0x6b, 0x2e, 0x61, 0x6e, 0x73, 0x77, 0x65, 0x72, 0x73, 0x65, 0x72,
+	0x76, 0x69, 0x63, 0x65, 0x2e, 0x67, 0x65, 0x6e, 0x65, 0x72, 0x61, 0x74, 0x65, 0x64, 0x2e, 0x6d,
+	0x6f, 0x64, 0x65, 0x6c, 0x2e, 0x76, 0x31, 0x2e, 0x41, 0x6e, 0x73, 0x77, 0x65, 0x72, 0x45, 0x76,
+	0x65, 0x6e, 0x74, 0x54, 0x79, 0x70, 0x65, 0x52, 0x09, 0x65, 0x76, 0x65, 0x6e, 0x74, 0x54, 0x79,
+	0x70, 0x65, 0x12, 0x48, 0x0a, 0x04, 0x64, 0x61, 0x74, 0x61, 0x18, 0x02, 0x20, 0x01, 0x28, 0x0b,
+	0x32, 0x34, 0x2e, 0x64, 0x6f, 0x63, 0x68, 0x71, 0x2e, 0x63, 0x6f, 0x2e, 0x75, 0x6b, 0x2e, 0x61,
+	0x6e, 0x73, 0x77, 0x65, 0x72, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x67, 0x65, 0x6e,
+	0x65, 0x72, 0x61, 0x74, 0x65, 0x64, 0x2e, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x2e, 0x76, 0x31, 0x2e,
+	0x41, 0x6e, 0x73, 0x77, 0x65, 0x72, 0x52, 0x04, 0x64, 0x61, 0x74, 0x61, 0x2a, 0x8a, 0x01, 0x0a,
+	0x0f, 0x41, 0x6e, 0x73, 0x77, 0x65, 0x72, 0x45, 0x76, 0x65, 0x6e, 0x74, 0x54, 0x79, 0x70, 0x65,
+	0x12, 0x1d, 0x0a, 0x19, 0x41, 0x4e, 0x53, 0x57, 0x45, 0x52, 0x5f, 0x45, 0x56, 0x45, 0x4e, 0x54,
+	0x5f, 0x54, 0x59, 0x50, 0x45, 0x5f, 0x55, 0x4e, 0x4b, 0x4e, 0x4f, 0x57, 0x4e, 0x10, 0x00, 0x12,
+	0x1c, 0x0a, 0x18, 0x41, 0x4e, 0x53, 0x57, 0x45, 0x52, 0x5f, 0x45, 0x56, 0x45, 0x4e, 0x54, 0x5f,
+	0x54, 0x59, 0x50, 0x45, 0x5f, 0x43, 0x52, 0x45, 0x41, 0x54, 0x45, 0x10, 0x01, 0x12, 0x1c, 0x0a,
+	0x18, 0x41, 0x4e, 0x53, 0x57, 0x45, 0x52, 0x5f, 0x45, 0x56, 0x45, 0x4e, 0x54, 0x5f, 0x54, 0x59,
+	0x50, 0x45, 0x5f, 0x55, 0x50, 0x44, 0x41, 0x54, 0x45, 0x10, 0x02, 0x12, 0x1c, 0x0a, 0x18, 0x41,
+	0x4e, 0x53, 0x57, 0x45, 0x52, 0x5f, 0x45, 0x56, 0x45, 0x4e, 0x54, 0x5f, 0x54, 0x59, 0x50, 0x45,
+	0x5f, 0x44, 0x45, 0x4c, 0x45, 0x54, 0x45, 0x10, 0x03, 0x42, 0x21, 0x5a, 0x1f, 0x64, 0x6f, 0x63,
+	0x68, 0x71, 0x2e, 0x63, 0x6f, 0x2e, 0x75, 0x6b, 0x2f, 0x61, 0x6e, 0x73, 0x77, 0x65, 0x72, 0x73,
+	0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x61, 0x70, 0x69, 0x2f, 0x76, 0x31, 0x62, 0x06, 0x70, 0x72,
+	0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -104,16 +236,21 @@ func file_answer_model_proto_rawDescGZIP() []byte {
 	return file_answer_model_proto_rawDescData
 }
 
-var file_answer_model_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_answer_model_proto_enumTypes = make([]protoimpl.EnumInfo, 1)
+var file_answer_model_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
 var file_answer_model_proto_goTypes = []interface{}{
-	(*Answer)(nil), // 0: dochq.co.uk.answerservice.generated.model.v1.Answer
+	(AnswerEventType)(0), // 0: dochq.co.uk.answerservice.generated.model.v1.AnswerEventType
+	(*Answer)(nil),       // 1: dochq.co.uk.answerservice.generated.model.v1.Answer
+	(*AnswerEvent)(nil),  // 2: dochq.co.uk.answerservice.generated.model.v1.AnswerEvent
 }
 var file_answer_model_proto_depIdxs = []int32{
-	0, // [0:0] is the sub-list for method output_type
-	0, // [0:0] is the sub-list for method input_type
-	0, // [0:0] is the sub-list for extension type_name
-	0, // [0:0] is the sub-list for extension extendee
-	0, // [0:0] is the sub-list for field type_name
+	0, // 0: dochq.co.uk.answerservice.generated.model.v1.AnswerEvent.event_type:type_name -> dochq.co.uk.answerservice.generated.model.v1.AnswerEventType
+	1, // 1: dochq.co.uk.answerservice.generated.model.v1.AnswerEvent.data:type_name -> dochq.co.uk.answerservice.generated.model.v1.Answer
+	2, // [2:2] is the sub-list for method output_type
+	2, // [2:2] is the sub-list for method input_type
+	2, // [2:2] is the sub-list for extension type_name
+	2, // [2:2] is the sub-list for extension extendee
+	0, // [0:2] is the sub-list for field type_name
 }
 
 func init() { file_answer_model_proto_init() }
@@ -134,19 +271,32 @@ func file_answer_model_proto_init() {
 				return nil
 			}
 		}
+		file_answer_model_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*AnswerEvent); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
 		File: protoimpl.DescBuilder{
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_answer_model_proto_rawDesc,
-			NumEnums:      0,
-			NumMessages:   1,
+			NumEnums:      1,
+			NumMessages:   2,
 			NumExtensions: 0,
 			NumServices:   0,
 		},
 		GoTypes:           file_answer_model_proto_goTypes,
 		DependencyIndexes: file_answer_model_proto_depIdxs,
+		EnumInfos:         file_answer_model_proto_enumTypes,
 		MessageInfos:      file_answer_model_proto_msgTypes,
 	}.Build()
 	File_answer_model_proto = out.File
